git animaiton website

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="col-md-12 service-box-1">
                             <div class="card service-card">
                                 <div class="card-body">
-                                    <h6 class="card-subtitle mb-2 text-muted"> <img src="./images/layer.png" alt="">
+                                    <h6 class="card-subtitle mb-2 text-muted"> <img  src="./images/vectorpaint (2).png" alt="">
                                     </h6>
                                     <h5 class="card-title">
                                         Estrutura Tecnológica </h5>
@@ -105,7 +105,7 @@
                         <div class="col-md-12 mt-5">
                             <div class="card service-card ">
                                 <div class="card-body">
-                                    <h6 class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-layer-group"></i>
+                                    <h6 class="card-subtitle mb-2 text-muted"><img src="./images/vectorpaint (3).png" alt="">
                                     </h6>
                                     <h5 class="card-title">
                                         Cobrança Preventiva</h5>
@@ -120,7 +120,7 @@
                         <div class="col-md-12 service-box-1">
                             <div class="card service-card">
                                 <div class="card-body">
-                                    <h6 class="card-subtitle mb-2 text-muted"><i class="fa-brands fa-squarespace"></i>
+                                    <h6 class="card-subtitle mb-2 text-muted"><img src="/images/vectorpaint (6).png" alt="">
                                     </h6>
                                     <h5 class="card-title">Cobrança Preventiva</h5>
 
@@ -135,7 +135,7 @@
                         <div class="col-md-12 mt-5">
                             <div class="card service-card">
                                 <div class="card-body">
-                                    <h6 class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-cloud-arrow-up"></i>
+                                    <h6 class="card-subtitle mb-2 text-muted"><img src="/images/vectorpaint (5).png" alt="">
                                     </h6>
                                     <h5 class="card-title">
                                         Cobrança Extrajudicial</h5>
